<resources>
    <string name="app_name">WineUp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="main_title">Главная</string>
    <string name="catalog_title">Каталог</string>
    <string name="favorites_title">Избранное</string>
    <string name="profile_title">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sort_fragment">Сортировать по...</string>
    <string name="expert_assessment">Оценка экспертов:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_image_description">leftImage</string>
    <string name="wine_item_description">%1$s, %2$s</string>
    <string name="wine_item_relevance">Подходит вам на %1$d%%</string>
    <string name="wine_item_price">%1$d₽</string>
    <string name="wine_item_old_price"><s>%1$d₽</s></string>
    <string name="wine_item_discount">-%1$d%%</string>
    <string name="wine_item_year">%1$d г.</string>
    <string name="hint_search">Поиск</string>
    <string name="filter_price">Цена</string>
    <string name="from_price">От</string>
    <string name="to_price">До</string>
    <string name="item_with_discount">Товар со скидкой</string>
    <string name="to1500">До 1500</string>
    <string name="filter_confirm">Применить</string>
    <string name="filter_color">Цвет</string>
    <string name="filter_reset">Сбросить</string>
    <string name="filter_white_wine">Белое</string>
    <string name="filter_red_wine">Красное</string>
    <string name="filter_pink_wine">Розовое</string>
    <string name="filter_apply">Применить</string>
    <string name="filter_countries">Страна</string>
    <string name="recommended">Рекомендованное</string>
    <string name="recommend">Наиболее вам подходящие</string>
    <string name="by_rating">По рейтингу</string>
    <string name="by_recommendation">По рекомендации</string>
    <string name="filter_dry_wine">Сухое</string>
    <string name="filter_semi_dry_wine">Полусухое</string>
    <string name="filter_semi_sweet_wine">Полусладкое</string>
    <string name="filter_sweet_wine">Сладкое</string>
    <string name="phoneNumberTestInformation">Введите номер телефона для авторизации</string>
    <string name="whineUp">WhineUp</string>
    <string name="enterPhoneNumber">+7 (9xx) xxx-xx-xx</string>
    <string name="authButton">Войти</string>
    <string name="withoutAuthButton">ПРОДОЛЖИТЬ БЕЗ АВТОРИЗАЦИИ</string>
    <string name="enter_code">Введите код подтверждения</string>
    <string name="back">Вернуться назад</string>
    <string name="wrong_code">Код введен неверно</string>
    <string name="resend_code">Отправить повторно</string>
    <string name="timer_test">Отправить повторно через %1$s c</string>

    <string name="wineup">WineUp</string>
    <string name="age_err_1">Спасибо за честный ответ!</string>
    <string name="age_err_2">К сожалению наше приложение содержит информацию, не предназначинную для лиц младше 18 :(</string>
    <string name="age_err_3">Назад</string>
    <string name="age_access_1">Добро пожаловать!</string>
    <string name="age_access_2">Вам уже исполнилось 18?</string>
    <string name="age_access_3">Да!</string>
    <string name="age_access_4">Нет</string>
    <string name="data_enter">Введите данные</string>
    <string name="birth_date">Дата рождения</string>
    <string name="date_format">ДД/ММ/ГГГГ</string>
    <string name="name">Имя</string>
    <string name="example_name">Иван</string>
    <string name="city">Город</string>
    <string name="example_city">Москва</string>
    <string name="agreement">Даю согласие на обработку персональных данных</string>
    <string name="enter">Войти</string>
    <string name="sort_by">Сортировать по</string>
    <string name="format_error">Формат от 2 до 15 букв, не содержащих символов</string>
    <string name="by_recommend">По рекомендации</string>
    <string name="ascendingPrice">По возрастанию цены</string>
    <string name="descendingPrice">По убыванию цены</string>
    <string name="search_in_favorite">Поиск по избранному</string>
    <string name="clear_favorite_underlined"><u>Очистить избранное</u></string>
    <string name="by_price_min">По возрастанию цены</string>
    <string name="by_price_max">По убыванию цены</string>
    <string name="clear_alert_title">Вы уверены, что хотите очистить избранное?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="price">Стоимость:</string>
    <string name="sugare_filter_name">Содержание сахара</string>
    <string name="favorites_nothing_found">Совпадений не найдено</string>
    <string name="favorites_empty_title">Тут пока пусто</string>
    <string name="favorites_empty_subtitle">Наш каталог поможет Вам\nчто-нибудь найти..</string>
    <string name="button_to_catalog">Перейти в каталог</string>
    <string name="code_sample">Например: 234 564</string>
    <string name="counter_resend_code"><u>Отправить повторно через 59</u></string>

</resources>